--- a/desktop/index.html
+++ b/desktop/index.html
@@ -8,6 +8,8 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <h1>TDPlayground!</h1>
+        <play-frame id="frame"></play-frame>
     </body>
+    <script src="lib/socket.io.js"></script>
+    <script type="module" src="index.js"></script>
 </html>
