--- a/frontend/playground/showcase_orca/public/index.html
+++ b/frontend/playground/showcase_orca/public/index.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <play-frame id="frame"></play-frame>
+        <play-lobby id="lobby"></play-lobby>
     </body>
     <script src="lib/socket.io.js"></script>
     <script type="module" src="index.js"></script>
