--- a/braket/3d/board/public/index.html
+++ b/braket/3d/board/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="space"></div>
 </body>
 <script type="module" src="./glue.js"></script>
 </html>
