--- a/promo/braket.html
+++ b/promo/braket.html
@@ -68,13 +68,15 @@
         'Core and Periphery',
         'Core. Orchestrates every operation concerned with safe and quick delivery',
         'Periphery. Where service providers reside',
-        'Introducing BraKet',
-        '',
-        '',
-        '',
-        '',
-        '',
-        ''
+        'Introducing BraKet by 4DA',
+        'Designed specifically for service providers',
+        'Organized into three components',
+        'Bra. Faces the network',
+        'Ket. Process user intercation',
+        'Glue. Wires up the logic that combines Bra  and Ket',
+        'It is straightforward yet flexible and powerful',
+        'AI copilots can generate full blown UI based on protocols and a few L&F parameters',
+        'TDPnet and BraKet are made for each other with developers  and end users in mind'
     ]
 
     let index = 1
